fix(lint): 修复 golangci-lint 所有错误 (#21)
