# docs/swagger.json
@@ -55,7 +55,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/home.RecipeListItem"
+                                "$ref": "#/definitions/zwei.RecipeListItem"
                             }
                         }
                     }
@@ -86,7 +86,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/home.RecipeListItem"
+                                "$ref": "#/definitions/zwei.RecipeListItem"
                             }
                         }
                     }
@@ -165,7 +165,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/recipe.RecipeListItem"
+                                "$ref": "#/definitions/zwei.RecipeListItem"
                             }
                         }
                     }
@@ -1367,7 +1367,7 @@
                     "type": "string"
                 },
                 "recipe": {
-                    "$ref": "#/definitions/favorite.RecipeListItem"
+                    "$ref": "#/definitions/zwei.RecipeListItem"
                 },
                 "recipe_id": {
                     "type": "string"
@@ -1410,63 +1410,11 @@
                 }
             }
         },
-        "favorite.RecipeListItem": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "difficulty": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "image_path": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "tags": {
-                    "$ref": "#/definitions/favorite.TagsGrouped"
-                },
-                "total_time_minutes": {
-                    "type": "integer"
-                }
-            }
-        },
-        "favorite.TagsGrouped": {
-            "type": "object",
-            "properties": {
-                "cuisines": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "flavors": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "scenes": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
         "history.HistoryListItem": {
             "type": "object",
             "properties": {
                 "recipe": {
-                    "$ref": "#/definitions/history.RecipeListItem"
+                    "$ref": "#/definitions/zwei.RecipeListItem"
                 },
                 "recipe_id": {
                     "type": "string"
@@ -1512,58 +1460,6 @@
                 }
             }
         },
-        "history.RecipeListItem": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "difficulty": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "image_path": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "tags": {
-                    "$ref": "#/definitions/history.TagsGrouped"
-                },
-                "total_time_minutes": {
-                    "type": "integer"
-                }
-            }
-        },
-        "history.TagsGrouped": {
-            "type": "object",
-            "properties": {
-                "cuisines": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "flavors": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "scenes": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
         "home.BannerItem": {
             "type": "object",
             "properties": {
@@ -1581,58 +1477,6 @@
                 },
                 "title": {
                     "type": "string"
-                }
-            }
-        },
-        "home.RecipeListItem": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "difficulty": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "image_path": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "tags": {
-                    "$ref": "#/definitions/home.TagsGrouped"
-                },
-                "total_time_minutes": {
-                    "type": "integer"
-                }
-            }
-        },
-        "home.TagsGrouped": {
-            "type": "object",
-            "properties": {
-                "cuisines": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "flavors": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "scenes": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 }
             }
         },
@@ -1873,35 +1717,6 @@
                 }
             }
         },
-        "recipe.RecipeListItem": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "difficulty": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "image_path": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "tags": {
-                    "$ref": "#/definitions/recipe.TagsGrouped"
-                },
-                "total_time_minutes": {
-                    "type": "integer"
-                }
-            }
-        },
         "recipe.RecipeResponse": {
             "type": "object",
             "properties": {
@@ -1957,7 +1772,7 @@
                     }
                 },
                 "tags": {
-                    "$ref": "#/definitions/recipe.TagsGrouped"
+                    "$ref": "#/definitions/zwei.TagsGrouped"
                 },
                 "total_time_minutes": {
                     "type": "integer"
@@ -2052,29 +1867,6 @@
                 }
             }
         },
-        "recipe.TagsGrouped": {
-            "type": "object",
-            "properties": {
-                "cuisines": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "flavors": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "scenes": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
         "recommend.ContextRequest": {
             "type": "object",
             "properties": {
@@ -2143,7 +1935,7 @@
                     "type": "string"
                 },
                 "tags": {
-                    "$ref": "#/definitions/recommend.TagsGrouped"
+                    "$ref": "#/definitions/zwei.TagsGrouped"
                 },
                 "total_time_minutes": {
                     "type": "integer"
@@ -2191,29 +1983,6 @@
                 "summary": {
                     "description": "LLM 生成的一句话整体评价",
                     "type": "string"
-                }
-            }
-        },
-        "recommend.TagsGrouped": {
-            "type": "object",
-            "properties": {
-                "cuisines": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "flavors": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "scenes": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 }
             }
         },
@@ -2308,6 +2077,58 @@
                 "url": {
                     "description": "上传后的图片 URL",
                     "type": "string"
+                }
+            }
+        },
+        "zwei.RecipeListItem": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "difficulty": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image_path": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "tags": {
+                    "$ref": "#/definitions/zwei.TagsGrouped"
+                },
+                "total_time_minutes": {
+                    "type": "integer"
+                }
+            }
+        },
+        "zwei.TagsGrouped": {
+            "type": "object",
+            "properties": {
+                "cuisines": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "flavors": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "scenes": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
